# romp

./: .README.md.swp  .omp_race_client.cc.swp  CMakeLists.txt  LICENSE.md  README.md  env_setup.sh  install.sh
.github/workflows/: ccpp.yml
InstrumentClient/: CMakeLists.txt  InstrumentClient.cpp  InstrumentClient.h  InstrumentMain.cpp
RompLib/: CMakeLists.txt
RompLib/include/: AccessControl.h  AccessHistory.h  Callbacks.h  Core.h  CoreUtil.h  DataSharing.h  Initialize.h  LRUCache.h  Label.h  LockSet.h  McsLock.h  ParRegionData.h  ParallelRegionData.h  PerformanceCounters.h  QueryFuncs.h  Record.h  RecordManagement.h  Segment.h  ShadowMemory.h  TaskData.h  TaskDepGraph.h  TaskDependenceGraph.h  TaskInfoQuery.h  ThreadData.h  mcs-lock.h  pfq-rwlock.h
RompLib/src/: AccessControl.cpp  AccessHistory.cpp  Callbacks.cpp  Core.cpp  CoreUtil.cpp  DataSharing.cpp  LRUCache.cpp  Label.cpp  LockSet.cpp  McsLock.cpp  ParRegionData.cpp  ParallelRegionData.cpp  PerformanceCounters.cpp  QueryFuncs.cpp  Record.cpp  RompLib.cpp  Segment.cpp  TaskData.cpp  TaskDepGraph.cpp  TaskDependenceGraph.cpp  TaskInfoQuery.cpp  mcs-lock.cpp  pfq-rwlock.cpp
pkgs-src/dyninst-client/: Makefile  omp_race_client.cc
pkgs-src/elfutils-0.173/: Makefile.in  aclocal.m4  configure  elfutils.spec
pkgs-src/elfutils-0.173/backends/: Makefile.in
pkgs-src/elfutils-0.173/config/: Makefile.in
pkgs-src/elfutils-0.173/lib/: Makefile.in
pkgs-src/elfutils-0.173/libasm/: Makefile.in
pkgs-src/elfutils-0.173/libcpu/: Makefile.in  i386_lex.c  i386_parse.c
pkgs-src/elfutils-0.173/libdw/: Makefile.in
pkgs-src/elfutils-0.173/libdwelf/: Makefile.in
pkgs-src/elfutils-0.173/libdwfl/: Makefile.in
pkgs-src/elfutils-0.173/libebl/: Makefile.in
pkgs-src/elfutils-0.173/libelf/: Makefile.in
pkgs-src/elfutils-0.173/m4/: Makefile.in
pkgs-src/elfutils-0.173/po/: de.gmo  elfutils.pot  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  es.gmo  ja.gmo  pl.gmo  uk.gmo
pkgs-src/elfutils-0.173/src/: Makefile.in
pkgs-src/elfutils-0.173/tests/: Makefile.in
pkgs-src/romp-lib/: CMakeLists.txt
pkgs-src/romp-lib/include/: AccessHistory.h  TaskLabel.h  atomic_ops_if.h  hpctoolkit-config.h  messages.h  messages.i
pkgs-src/romp-lib/src/: ShadowMemory.cpp  TaskLabel.cpp  fmt.cpp  mcs-lock.cpp  messages.cpp  ompt_race.cpp  scratch.cc
script/: benchmark_config.py  dynamic.py  measure.py  metrics.py  metrics_config.py  performance.py  test-harness.sh  visualize.py
script/counter_based/: aggregate.py  performance.py  visualize.py
script/mask/: segment_mask.py
tests/: simple-omp.cpp
tests/OmpSCR_v2.0/common/: wtime.cpp
tests/ci/: README.md  ci-tests.sh
tests/ci/benchmarks/: CI003-antidep1-orig-vec-yes.cpp  DRB001-antidep1-orig-yes.c  DRB002-antidep1-var-yes.c  DRB003-antidep2-orig-yes.c  DRB004-antidep2-var-yes.c  DRB006-indirectaccess2-orig-yes.c  DRB008-indirectaccess4-orig-yes.c  DRB009-lastprivatemissing-orig-yes.c  DRB010-lastprivatemissing-var-yes.c  DRB011-minusminus-orig-yes.c  DRB012-minusminus-var-yes.c  DRB014-outofbounds-orig-yes.c  DRB015-outofbounds-var-yes.c  DRB016-outputdep-orig-yes.c  DRB017-outputdep-var-yes.c  DRB018-plusplus-orig-yes.c  DRB019-plusplus-var-yes.c  DRB020-privatemissing-var-yes.c  DRB021-reductionmissing-orig-yes.c  DRB022-reductionmissing-var-yes.c  DRB028-privatemissing-orig-yes.c  DRB029-truedep1-orig-yes.c  DRB030-truedep1-var-yes.c  DRB031-truedepfirstdimension-orig-yes.c  DRB032-truedepfirstdimension-var-yes.c  DRB033-truedeplinear-orig-yes.c  DRB034-truedeplinear-var-yes.c  DRB035-truedepscalar-orig-yes.c  DRB036-truedepscalar-var-yes.c  DRB037-truedepseconddimension-orig-yes.c  DRB038-truedepseconddimension-var-yes.c  DRB039-truedepsingleelement-orig-yes.c  DRB040-truedepsingleelement-var-yes.c  DRB041-3mm-parallel-no.c  DRB042-3mm-tile-no.c  DRB043-adi-parallel-no.c  DRB044-adi-tile-no.c  DRB045-doall1-orig-no.c  DRB046-doall2-orig-no.c  DRB047-doallchar-orig-no.c  (+37 more)
tests/dataracebench/: check-data-races.sh
tests/dataracebench/micro-benchmarks/: .DRB095-doall2-taskloop-orig-yes.c.swp  DRB005-indirectaccess1-orig-yes.c  DRB007-indirectaccess3-orig-yes.c
tests/dataracebench/scripts/: generate-csv.py  test-harness.sh
tests/dataracebench_results/master-result/: romp.csv  romp_adjusted.csv
tests/dataracebench_results/optimize-result/: romp.csv
tests/dataracebench_results/results-baseline-submit/: romp.csv
tests/dataracebench_results/results-optimize-submit/: romp.csv
tests/performance_results/: master_optimize-ms-2.json  master_optimize.json  master_optimize_32_limit.json  master_optimize_limist_8.json  master_optimize_limit_4.json  master_optimize_limit_64.json  master_optimize_limit_8.json  optimize-limit-8_optimize.json  optimize-ms-2_optimize.json  processed-summary-2.txt  summary-2.json  summary-2.txt  summary-3.json  summary-master-optimize-size-16.json  summary-record-size-16.json  summary.json
tests/performance_results/LULESH-output-optimize-v4/: lulesh2.0_4.out
tests/performance_results/hpctoolkit-c_mandel.par.inst-database-no-optimize/: experiment.xml
tests/performance_results/hpctoolkit-lulesh2.0.inst-database-s-20/: experiment.mt
tests/performance_results/lulesh-s20-output-optimize/: lulesh2.0.inst_1.out  lulesh2.0_1.out  lulesh2.0_2.out  lulesh2.0_4.out
tests/performance_results/misc-results/: master_optimize.json  master_optimize.json_v2  perf_counter_lulesh_s_10  perf_counter_lulesh_s_20
tests/performance_results/nas-master/: bt.S.x_0.out  ep.S.x.inst_0.out  lu.S.x.inst_0.out  ua.S.x_0.out
tests/performance_results/nas-optimize/: bt.S.x.inst_0.out  bt.S.x.inst_1.out  cg.S.x.inst_0.out  ft.S.x.inst_1.out  ft.S.x_0.out  ft.S.x_1.out  is.S.x_0.out  is.S.x_1.out  mg.S.x_0.out  sp.S.x.inst_0.out  sp.S.x_0.out
tests/performance_results/nas-optimize-result/: bt.S.x.inst_0.out  bt.S.x.inst_1.out  bt.S.x_0.out  cg.S.x_2.out  cg.S.x_3.out  ep.S.x.inst_1.out  ft.S.x_0.out  is.S.x.inst_4.out  lu.S.x_0.out  lu.S.x_4.out  sp.S.x.inst_1.out  ua.S.x.inst_0.out
tests/performance_results/ompscr-master-output/: c_fft6.par.inst_0.out  (+53 more)
(+3654 files in other folders)
